overflow y remove to stop jumping

--- a/src/project/project.css
+++ b/src/project/project.css
@@ -11,7 +11,7 @@
 }
 
 .project-preview-container.header {
-    overflow-x: hidden;
+    overflow: hidden;
     pointer-events: none;
     flex-wrap: wrap;
 }
